Fix save button wrap issue

--- a/src/styles/_workspace.scss
+++ b/src/styles/_workspace.scss
@@ -140,6 +140,10 @@ $code-color-error: #ff4444;
           .grading-editor-input-parent {
             /* Position the editor away from the buttons */
             margin-bottom: 0.5rem;
+            /* Cause the 'save' button shift down when size is small. */
+            .pt-button-group {
+              flex-wrap: wrap;
+            }
             .pt-numeric-input {
               .pt-button {
                 background-color: $cadet-color-2;
